--- a/public/css/style.css
+++ b/public/css/style.css
@@ -94,7 +94,8 @@ a {
   bottom: 0;
   left: 0;
   width: 3px;
-  height: 100%;
+  height: 80%;
+  margin: auto;
   background-color: currentColor;
 }
 
